@@ -71,7 +71,7 @@ final class ChangeListeners
 		{
 			final int size = list.size();
 			if(size==0)
-				return Collections.emptyList();
+				return List.of();
 
 			// make a copy to avoid ConcurrentModificationViolations
 			result = new ArrayList<>(size);
